# SimpleIPC

./: .clang-format  .gitignore  Buffer.cc  Buffer.h  CMakeLists.txt  Event.cc  Event.h  Main.cc  README.md  RingHeader.cc  RingHeader.h  SharedMemory.cc  SharedMemory.h
fbs/: monster.fbs
